--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "my-portfolio",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "https://rich-nyan.github.io/portfolio",
+  "private": false,
+  "homepage": "https://rich-nyan.github.io",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
